added utility and test functions
* several test functions added
* switch to pytest
* initial setup for github action
* several utility functions added
* lan for USEtox output function

--- a/develop_notebook.ipynb
+++ b/develop_notebook.ipynb
@@ -2,15 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'name': 'CAFFEINE', 'smiles': 'CN1C(=O)N(C)c2ncn(C)c2C1(=O)', 'cas': '000058-08-2'}, {'name': 'Caffeine sodium salicylate', 'smiles': 'C12=C(N=CN1C)N(C)C(=O)N(C)C2=O', 'cas': '008002-85-5'}, {'name': 'Caffeine, citrated [USAN]', 'smiles': 'C12=C(N=CN1(OC(=O)CC(O)(C(=O)O)CC(=O)C)C)N(C)C(=O)N(C)C2=O', 'cas': '000069-22-7'}, {'name': 'Caffeine, hydrochloride', 'smiles': 'C12=C(N=CN1C)N(C)C(=O)N(C)C2=O', 'cas': '005892-18-2'}, {'name': 'Caffeine, monohydrobromide', 'smiles': 'C12=C(N=CN1C)N(C)C(=O)N(C)C2=O', 'cas': '005743-18-0'}, {'name': 'Sodium caffeine benzoate', 'smiles': 'C12=C(N=CN1C)N(C)C(=O)N(C)C2=O', 'cas': '008000-95-1'}]\n"
+      "[{'name': 'FORMALDEHYDE', 'smiles': 'O=C', 'cas': '000050-00-0'}]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -18,6 +28,7 @@
     "import dacite\n",
     "import json\n",
     "import os\n",
+    "from pyepisuite.models import Identifiers\n",
     "\n",
     "def search_episuite(query_term):\n",
     "    url = 'https://episuite.dev/EpiWebSuite/api/search'\n",
@@ -30,9 +41,35 @@
     "\n",
     "\n",
     "\n",
-    "query_term = 'caffeine'  # Replace with your query term\n",
+    "query_term = '000050-00-0'  # Replace with your query term\n",
     "result = search_episuite(query_term)\n",
-    "print(result)"
+    "ids = [Identifiers(**item) for item in result]\n",
+    "print(result)\n",
+    "ids[0]\n",
+    "isinstance(ids[0], Identifiers)  # True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [1,2,3,4,5]\n",
+    "b = [6,7,8,9,10]\n",
+    "a+=b\n",
+    "a"
    ]
   },
   {
@@ -85,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +136,22 @@
     "        fieldtypes = {f.name: f.type for f in data_class.__dataclass_fields__.values()}\n",
     "        return data_class(**{f: from_dict(fieldtypes[f], data[f]) if isinstance(fieldtypes[f], type) else data[f] for f in data})\n",
     "    else:\n",
-    "        return data"
+    "        return data\n",
+    "    \n",
+    "from typing import Optional\n",
+    "def from_dict_main(data_class, data):\n",
+    "    if isinstance(data_class, type):\n",
+    "        if hasattr(data_class, '__dataclass_fields__'):\n",
+    "            fieldtypes = {f.name: f.type for f in data_class.__dataclass_fields__.values()}\n",
+    "            print(fieldtypes)\n",
+    "            return data_class(**{f: from_dict_main(fieldtypes[f], data[f]) for f in data})\n",
+    "    elif hasattr(data_class, '__origin__'):\n",
+    "        origin = data_class.__origin__\n",
+    "        if origin is list:\n",
+    "            return [from_dict_main(data_class.__args__[0], item) for item in data]\n",
+    "        elif origin is Optional:\n",
+    "            return from_dict_main(data_class.__args__[0], data) if data is not None else None\n",
+    "    return data"
    ]
   },
   {
@@ -182,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,16 +246,43 @@
     "file_path = os.path.join('src', 'pyepisuite', 'models_expanded', 'result.json')\n",
     "with open(file_path, 'r') as file:\n",
     "    res_cas = json.load(file)\n",
-    "res_epi = dacite.from_dict(data_class=ResultEPISuite, data=res_cas)"
+    "res_epi = dacite.from_dict(data_class=ResultEPISuite, data=res_cas)\n",
+    "res_eco = dacite.from_dict(data_class=ResultEcoSAR, data=res_cas[\"ecosar\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'parameters': <class 'pyepisuite.models.Parameters'>, 'chemicalProperties': <class 'pyepisuite.models.ChemicalProperties'>, 'logKow': <class 'pyepisuite.models.LogKowResponse'>, 'meltingPoint': <class 'pyepisuite.models.MeltingPointResponse'>, 'boilingPoint': <class 'pyepisuite.models.BoilingPointResponse'>, 'vaporPressure': <class 'pyepisuite.models.VaporPressureResponse'>, 'waterSolubilityFromLogKow': <class 'pyepisuite.models.WaterSolubilityFromLogKowResponse'>, 'waterSolubilityFromWaterNt': <class 'pyepisuite.models.WaterSolubilityFromWaterNtResponse'>, 'henrysLawConstant': <class 'pyepisuite.models.HenrysLawConstantResponse'>, 'logKoa': <class 'pyepisuite.models.LogKoaResponse'>, 'biodegradationRate': <class 'pyepisuite.models.BiodegradationRateResponse'>, 'hydrocarbonBiodegradationRate': <class 'pyepisuite.models.HydrocarbonBiodegradationRateResponse'>, 'aerosolAdsorptionFraction': <class 'pyepisuite.models.AerosolAdsorptionFractionResponse'>, 'atmosphericHalfLife': <class 'pyepisuite.models.AtmosphericHalfLifeResponse'>, 'logKoc': <class 'pyepisuite.models.LogKocResponse'>, 'hydrolysis': <class 'pyepisuite.models.HydrolysisResponse'>, 'bioconcentration': <class 'pyepisuite.models.BioconcentrationResponse'>, 'waterVolatilization': <class 'pyepisuite.models.WaterVolatilizationResponse'>, 'sewageTreatmentModel': <class 'pyepisuite.models.SewageTreatmentModelResponse'>, 'fugacityModel': <class 'pyepisuite.models.FugacityModelResponse'>, 'dermalPermeability': <class 'pyepisuite.models.DermalPermeabilityResponse'>, 'analogs': typing.Optional[typing.List[str]], 'logKowAnalogs': typing.Optional[typing.List[pyepisuite.models.Parameter]]}\n",
+      "{'cas': <class 'str'>, 'smiles': typing.Optional[str], 'caseNumber': typing.Optional[str], 'userLogKow': typing.Optional[pyepisuite.models.Parameter], 'userMeltingPoint': typing.Optional[pyepisuite.models.Parameter], 'userBoilingPoint': typing.Optional[pyepisuite.models.Parameter], 'userWaterSolubility': typing.Optional[pyepisuite.models.Parameter], 'userVaporPressure': typing.Optional[pyepisuite.models.Parameter], 'userHenrysLawConstant': typing.Optional[pyepisuite.models.Parameter], 'userLogKoa': typing.Optional[pyepisuite.models.Parameter], 'userLogKoc': typing.Optional[pyepisuite.models.Parameter], 'userHydroxylReactionRateConstant': typing.Optional[pyepisuite.models.Parameter], 'userDermalPermeabilityCoefficient': typing.Optional[pyepisuite.models.Parameter], 'userBiodegradationRateRemoveMetals': typing.Optional[pyepisuite.models.Parameter], 'userAtmosphericHydroxylRadicalConcentration': typing.Optional[pyepisuite.models.Parameter], 'userAtmosphericOzoneConcentration': typing.Optional[pyepisuite.models.Parameter], 'userAtmosphericDaylightHours': typing.Optional[pyepisuite.models.Parameter], 'userStpHalfLifePrimaryClarifier': typing.Optional[pyepisuite.models.Parameter], 'userStpHalfLifeAerationVessel': typing.Optional[pyepisuite.models.Parameter], 'userStpHalfLifeSettlingTank': typing.Optional[pyepisuite.models.Parameter], 'userFugacityHalfLifeAir': typing.Optional[pyepisuite.models.Parameter], 'userFugacityHalfLifeWater': typing.Optional[pyepisuite.models.Parameter], 'userFugacityHalfLifeSoil': typing.Optional[pyepisuite.models.Parameter], 'userFugacityHalfLifeSediment': typing.Optional[pyepisuite.models.Parameter], 'userFugacityEmissionRateAir': typing.Optional[pyepisuite.models.Parameter], 'userFugacityEmissionRateWater': typing.Optional[pyepisuite.models.Parameter], 'userFugacityEmissionRateSoil': typing.Optional[pyepisuite.models.Parameter], 'userFugacityEmissionRateSediment': typing.Optional[pyepisuite.models.Parameter], 'userFugacityAdvectionTimeAir': typing.Optional[pyepisuite.models.Parameter], 'userFugacityAdvectionTimeWater': typing.Optional[pyepisuite.models.Parameter], 'userFugacityAdvectionTimeSoil': typing.Optional[pyepisuite.models.Parameter], 'userFugacityAdvectionTimeSediment': typing.Optional[pyepisuite.models.Parameter], 'modules': typing.Optional[typing.List[str]]}\n",
+      "{'name': <class 'str'>, 'systematicName': <class 'str'>, 'cas': <class 'str'>, 'smiles': typing.Optional[str], 'molecularWeight': <class 'float'>, 'molecularFormula': <class 'str'>, 'molecularFormulaHtml': <class 'str'>, 'organic': <class 'bool'>, 'organicAcid': <class 'bool'>, 'aminoAcid': <class 'bool'>, 'nonStandardMetal': <class 'bool'>, 'flags': typing.Optional[typing.Dict[str, bool]]}\n",
+      "{'estimatedValue': <class 'pyepisuite.models.logKowEstimatedValue'>, 'experimentalValues': typing.List[pyepisuite.models.ExperimentalValue], 'selectedValue': <class 'pyepisuite.models.SelectedValue'>}\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'parameters'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m res_epi \u001b[38;5;241m=\u001b[39m \u001b[43mfrom_dict_main\u001b[49m\u001b[43m(\u001b[49m\u001b[43mResultEPISuite\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mres_cas\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[5], line 19\u001b[0m, in \u001b[0;36mfrom_dict_main\u001b[1;34m(data_class, data)\u001b[0m\n\u001b[0;32m     17\u001b[0m         fieldtypes \u001b[38;5;241m=\u001b[39m {f\u001b[38;5;241m.\u001b[39mname: f\u001b[38;5;241m.\u001b[39mtype \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m data_class\u001b[38;5;241m.\u001b[39m__dataclass_fields__\u001b[38;5;241m.\u001b[39mvalues()}\n\u001b[0;32m     18\u001b[0m         \u001b[38;5;28mprint\u001b[39m(fieldtypes)\n\u001b[1;32m---> 19\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m data_class(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[43m{\u001b[49m\u001b[43mf\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mfrom_dict_main\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfieldtypes\u001b[49m\u001b[43m[\u001b[49m\u001b[43mf\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[43mf\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mf\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m}\u001b[49m)\n\u001b[0;32m     20\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(data_class, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__origin__\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m     21\u001b[0m     origin \u001b[38;5;241m=\u001b[39m data_class\u001b[38;5;241m.\u001b[39m__origin__\n",
+      "Cell \u001b[1;32mIn[5], line 19\u001b[0m, in \u001b[0;36m<dictcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     17\u001b[0m         fieldtypes \u001b[38;5;241m=\u001b[39m {f\u001b[38;5;241m.\u001b[39mname: f\u001b[38;5;241m.\u001b[39mtype \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m data_class\u001b[38;5;241m.\u001b[39m__dataclass_fields__\u001b[38;5;241m.\u001b[39mvalues()}\n\u001b[0;32m     18\u001b[0m         \u001b[38;5;28mprint\u001b[39m(fieldtypes)\n\u001b[1;32m---> 19\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m data_class(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m{f: \u001b[43mfrom_dict_main\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfieldtypes\u001b[49m\u001b[43m[\u001b[49m\u001b[43mf\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[43mf\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m data})\n\u001b[0;32m     20\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(data_class, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__origin__\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m     21\u001b[0m     origin \u001b[38;5;241m=\u001b[39m data_class\u001b[38;5;241m.\u001b[39m__origin__\n",
+      "Cell \u001b[1;32mIn[5], line 19\u001b[0m, in \u001b[0;36mfrom_dict_main\u001b[1;34m(data_class, data)\u001b[0m\n\u001b[0;32m     17\u001b[0m         fieldtypes \u001b[38;5;241m=\u001b[39m {f\u001b[38;5;241m.\u001b[39mname: f\u001b[38;5;241m.\u001b[39mtype \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m data_class\u001b[38;5;241m.\u001b[39m__dataclass_fields__\u001b[38;5;241m.\u001b[39mvalues()}\n\u001b[0;32m     18\u001b[0m         \u001b[38;5;28mprint\u001b[39m(fieldtypes)\n\u001b[1;32m---> 19\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m data_class(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[43m{\u001b[49m\u001b[43mf\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mfrom_dict_main\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfieldtypes\u001b[49m\u001b[43m[\u001b[49m\u001b[43mf\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[43mf\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mf\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m}\u001b[49m)\n\u001b[0;32m     20\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(data_class, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__origin__\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m     21\u001b[0m     origin \u001b[38;5;241m=\u001b[39m data_class\u001b[38;5;241m.\u001b[39m__origin__\n",
+      "Cell \u001b[1;32mIn[5], line 19\u001b[0m, in \u001b[0;36m<dictcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     17\u001b[0m         fieldtypes \u001b[38;5;241m=\u001b[39m {f\u001b[38;5;241m.\u001b[39mname: f\u001b[38;5;241m.\u001b[39mtype \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m data_class\u001b[38;5;241m.\u001b[39m__dataclass_fields__\u001b[38;5;241m.\u001b[39mvalues()}\n\u001b[0;32m     18\u001b[0m         \u001b[38;5;28mprint\u001b[39m(fieldtypes)\n\u001b[1;32m---> 19\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m data_class(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m{f: from_dict_main(\u001b[43mfieldtypes\u001b[49m\u001b[43m[\u001b[49m\u001b[43mf\u001b[49m\u001b[43m]\u001b[49m, data[f]) \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m data})\n\u001b[0;32m     20\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(data_class, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__origin__\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m     21\u001b[0m     origin \u001b[38;5;241m=\u001b[39m data_class\u001b[38;5;241m.\u001b[39m__origin__\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'parameters'"
+     ]
+    }
+   ],
    "source": [
-    "res_epi = dacite.from_dict(data_class=ResultEPISuite, data=res_cas)"
+    "res_epi = from_dict_main(ResultEPISuite, res_cas)"
    ]
   },
   {
