--- a/develop_notebook.ipynb
+++ b/develop_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -30,18 +30,18 @@
     "import os\n",
     "from pyepisuite.models import Identifiers\n",
     "\n",
+    "\n",
     "def search_episuite(query_term):\n",
-    "    url = 'https://episuite.dev/EpiWebSuite/api/search'\n",
-    "    params = {'query': query_term}\n",
-    "    \n",
+    "    url = \"https://episuite.dev/EpiWebSuite/api/search\"\n",
+    "    params = {\"query\": query_term}\n",
+    "\n",
     "    response = requests.get(url, params=params)\n",
     "    response.raise_for_status()  # Raise an exception for HTTP errors\n",
     "    data = response.json()\n",
     "    return data\n",
     "\n",
     "\n",
-    "\n",
-    "query_term = '000050-00-0'  # Replace with your query term\n",
+    "query_term = \"000050-00-0\"  # Replace with your query term\n",
     "result = search_episuite(query_term)\n",
     "ids = [Identifiers(**item) for item in result]\n",
     "print(result)\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -66,20 +66,20 @@
     }
    ],
    "source": [
-    "a = [1,2,3,4,5]\n",
-    "b = [6,7,8,9,10]\n",
-    "a+=b\n",
+    "a = [1, 2, 3, 4, 5]\n",
+    "b = [6, 7, 8, 9, 10]\n",
+    "a += b\n",
     "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://episuite.dev/EpiWebSuite/api/search'\n",
-    "params = {'query': query_term}\n",
+    "url = \"https://episuite.dev/EpiWebSuite/api/search\"\n",
+    "params = {\"query\": query_term}\n",
     "\n",
     "response = requests.get(url, params=params)\n",
     "response.raise_for_status()  # Raise an exception for HTTP errors\n",
@@ -109,20 +109,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyepisuite.api_client import EpiSuiteAPIClient\n",
+    "\n",
     "epi = EpiSuiteAPIClient()\n",
-    "ids = epi.search('000058-08-2')\n",
-    "res_cas = epi.submit(cas= ids[0].cas)\n",
+    "ids = epi.search(\"000058-08-2\")\n",
+    "res_cas = epi.submit(cas=ids[0].cas)\n",
     "# res_name = epi.submit(smiles= ids[0].smiles)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,40 +135,61 @@
     "        return [from_dict(data_class.__args__[0], item) for item in data]\n",
     "    elif isinstance(data, dict):\n",
     "        fieldtypes = {f.name: f.type for f in data_class.__dataclass_fields__.values()}\n",
-    "        return data_class(**{f: from_dict(fieldtypes[f], data[f]) if isinstance(fieldtypes[f], type) else data[f] for f in data})\n",
+    "        return data_class(\n",
+    "            **{\n",
+    "                f: (\n",
+    "                    from_dict(fieldtypes[f], data[f])\n",
+    "                    if isinstance(fieldtypes[f], type)\n",
+    "                    else data[f]\n",
+    "                )\n",
+    "                for f in data\n",
+    "            }\n",
+    "        )\n",
     "    else:\n",
     "        return data\n",
-    "    \n",
+    "\n",
+    "\n",
     "from typing import Optional\n",
+    "\n",
+    "\n",
     "def from_dict_main(data_class, data):\n",
     "    if isinstance(data_class, type):\n",
-    "        if hasattr(data_class, '__dataclass_fields__'):\n",
-    "            fieldtypes = {f.name: f.type for f in data_class.__dataclass_fields__.values()}\n",
+    "        if hasattr(data_class, \"__dataclass_fields__\"):\n",
+    "            fieldtypes = {\n",
+    "                f.name: f.type for f in data_class.__dataclass_fields__.values()\n",
+    "            }\n",
     "            print(fieldtypes)\n",
-    "            return data_class(**{f: from_dict_main(fieldtypes[f], data[f]) for f in data})\n",
-    "    elif hasattr(data_class, '__origin__'):\n",
+    "            return data_class(\n",
+    "                **{f: from_dict_main(fieldtypes[f], data[f]) for f in data}\n",
+    "            )\n",
+    "    elif hasattr(data_class, \"__origin__\"):\n",
     "        origin = data_class.__origin__\n",
     "        if origin is list:\n",
     "            return [from_dict_main(data_class.__args__[0], item) for item in data]\n",
     "        elif origin is Optional:\n",
-    "            return from_dict_main(data_class.__args__[0], data) if data is not None else None\n",
+    "            return (\n",
+    "                from_dict_main(data_class.__args__[0], data)\n",
+    "                if data is not None\n",
+    "                else None\n",
+    "            )\n",
     "    return data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyepisuite.models import ResultEcoSAR, ResultEPISuite\n",
-    "res_ecosar = res_cas['ecosar']\n",
+    "\n",
+    "res_ecosar = res_cas[\"ecosar\"]\n",
     "# remove ecosar from the dictionary\n",
-    "res_cas.pop('ecosar', None)\n",
+    "res_cas.pop(\"ecosar\", None)\n",
     "# remove output and alerts from the dictionary\n",
-    "res_ecosar.pop('output', None)\n",
+    "res_ecosar.pop(\"output\", None)\n",
     "# res_ecosar.pop('alerts', None)\n",
-    "ecosar_data  = from_dict(ResultEcoSAR, res_ecosar)"
+    "ecosar_data = from_dict(ResultEcoSAR, res_ecosar)"
    ]
   },
   {
@@ -212,29 +234,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import Optional\n",
+    "\n",
+    "\n",
     "def from_dict_main(data_class, data):\n",
     "    if isinstance(data_class, type):\n",
-    "        if hasattr(data_class, '__dataclass_fields__'):\n",
-    "            fieldtypes = {f.name: f.type for f in data_class.__dataclass_fields__.values()}\n",
+    "        if hasattr(data_class, \"__dataclass_fields__\"):\n",
+    "            fieldtypes = {\n",
+    "                f.name: f.type for f in data_class.__dataclass_fields__.values()\n",
+    "            }\n",
     "            print(fieldtypes)\n",
-    "            return data_class(**{f: from_dict_main(fieldtypes[f], data[f]) for f in data})\n",
-    "    elif hasattr(data_class, '__origin__'):\n",
+    "            return data_class(\n",
+    "                **{f: from_dict_main(fieldtypes[f], data[f]) for f in data}\n",
+    "            )\n",
+    "    elif hasattr(data_class, \"__origin__\"):\n",
     "        origin = data_class.__origin__\n",
     "        if origin is list:\n",
     "            return [from_dict_main(data_class.__args__[0], item) for item in data]\n",
     "        elif origin is Optional:\n",
-    "            return from_dict_main(data_class.__args__[0], data) if data is not None else None\n",
+    "            return (\n",
+    "                from_dict_main(data_class.__args__[0], data)\n",
+    "                if data is not None\n",
+    "                else None\n",
+    "            )\n",
     "    return data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,9 +274,10 @@
     "# res_epi = from_dict(ResultEPISuite, res_cas)\n",
     "\n",
     "from pyepisuite.models import ResultEcoSAR, ResultEPISuite\n",
+    "\n",
     "# load result.json file\n",
-    "file_path = os.path.join('src', 'pyepisuite', 'models_expanded', 'result.json')\n",
-    "with open(file_path, 'r') as file:\n",
+    "file_path = os.path.join(\"data\", \"sample\", \"result.json\")\n",
+    "with open(file_path, \"r\") as file:\n",
     "    res_cas = json.load(file)\n",
     "res_epi = dacite.from_dict(data_class=ResultEPISuite, data=res_cas)\n",
     "res_eco = dacite.from_dict(data_class=ResultEcoSAR, data=res_cas[\"ecosar\"])"
@@ -339,7 +372,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "physchem",
+   "display_name": "mychem",
    "language": "python",
    "name": "python3"
   },
@@ -353,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
