--- a/develop_notebook.ipynb
+++ b/develop_notebook.ipynb
@@ -372,7 +372,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mychem",
+   "display_name": "physchem",
    "language": "python",
    "name": "python3"
   },
@@ -386,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
